// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.account;
option go_package = "github.com/bucketeer-io/bucketeer/proto/account";

import "proto/environment/environment.proto";

message Account {
  enum Role {
    VIEWER = 0;
    EDITOR = 1;
    OWNER = 2;
    UNASSIGNED = 99;
  }
  string id = 1;
  string email = 2;
  string name = 3;
  Role role = 4;
  bool disabled = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  bool deleted = 8;
}

message AccountV2 {
  enum Environment_Role {
    Environment_Role_UNASSIGNED = 0;
    Environment_Role_VIEWER = 1;
    Environment_Role_EDITOR = 2;
    Environment_Role_OWNER = 3;
  }
  enum Organization_Role {
    Organization_Role_UNASSIGNED = 0;
    Organization_Role_MEMBER = 1;
    Organization_Role_ADMIN = 2;
    Organization_Role_OWNER = 3;
  }
  message EnvironmentRole {
    string environment_id = 1;
    Environment_Role role = 2;
  }
  string email = 1;
  string name = 2;
  string avatar_image_url = 3;
  string organization_id = 4;
  Organization_Role organization_role = 5;
  repeated EnvironmentRole environment_roles = 6;
  bool disabled = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}

message EnvironmentRoleV2 {
  environment.EnvironmentV2 environment = 1;
  Account.Role role = 2;
  bool trial_project = 3;
  int64 trial_started_at = 4;  // optional
}
